tile adding functionality added

--- a/index.html
+++ b/index.html
@@ -13,19 +13,6 @@
 		<h2>A game by Alan Ma</h2>
 	</header>
 	<div id="game-wrapper">
-		<div id="game">
-			<div class="row">
-				<div class="tile correct" data-correct="1"></div>
-				<div class="tile" data-correct="0"></div>
-				<div class="tile" data-correct="0"></div>
-				<div class="tile" data-correct="0"></div>
-			</div>
-			<div class="row">
-				<div class="tile" data-correct="0"></div>
-				<div class="tile" data-correct="0"></div>
-				<div class="tile correct" data-correct="1"></div>
-				<div class="tile" data-correct="0"></div>
-			</div>
-		</div>		
+		<div id="game"></div>		
 	</div>
 </div>
