added score mechanic

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<h2>A game by Alan Ma</h2>
 	</header>
 	<div id="game-wrapper">
+		<div id="score">0</div>
 		<div id="game"></div>		
 	</div>
 </div>
