--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <div id="container">
 	<header>
-		<h1>Tap Tiles</h1>
-		<h2>A game by Alan Ma</h2>
+		<h1>Tap Tiles: A game by Alan Ma</h1>
+		<h2>Use 'f', 'g', 'h', and 'j' to play.</h2>
 	</header>
 	<div id="game-wrapper">
 		<div id="score">0</div>
