changed rules description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id="container">
 	<header>
 		<h1>Tap Tiles: A game by Alan Ma</h1>
-		<h2>Use 'f', 'g', 'h', and 'j' to play.</h2>
+		<h2>Use 'f', 'g', 'h', and 'j' to play (or click).</h2>
 	</header>
 	<div id="game-wrapper">
 		<div id="score">0</div>
