added link to profile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div id="container">
 	<header>
-		<h1>Tap Tiles: A game by Alan Ma</h1>
+		<h1>Tap Tiles: A game by <a href="https://github.com/alan-ma" target="_blank">Alan Ma</a></h1>
 		<h2>Use 'f', 'g', 'h', and 'j' to play (or click).</h2>
 	</header>
 	<div id="game-wrapper">
