--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	</header>
 	<div id="game-wrapper">
 		<div id="score">0</div>
+		<div id="time_remaining"></div>
 		<div id="game"></div>		
 	</div>
 </div>
